[package]
name = "binutils"
version = "0.1.0"
authors = ["Ticki <Ticki@users.noreply.github.com>"]

[[bin]]
name = "strings"
path = "src/bin/strings.rs"

[[bin]]
name = "hex"
path = "src/bin/hex.rs"

[[bin]]
name = "hexdump"
path = "src/bin/hexdump.rs"

[[bin]]
name = "disasm"
path = "src/disasm/main.rs"

[dependencies.extra]
git = "https://github.com/redox-os/libextra.git"

