[package]
name = "binutils"
version = "0.1.0"
authors = ["Ticki <Ticki@users.noreply.github.com>"]

[[bin]]
name = "strings"
path = "src/bin/strings.rs"

[[bin]]
name = "hex"
path = "src/bin/hex.rs"

[[bin]]
name = "hexdump"
path = "src/bin/hexdump.rs"

[dependencies.extra]
git = "https://gitlab.redox-os.org/redox-os/libextra.git"
